# trt-llm-triton-benchmark-suite

./: .gitignore  Makefile  README.md  blueprint.md  pyproject.toml  requirements.txt
benchmarks/: __init__.py
benchmarks/configs/: backend_comparison.yaml  concurrency_sweep.yaml  multi_precision_sweep.yaml  single_gpu_baseline.yaml  smoke_triton_trtllm.yaml  smoke_vllm.yaml
benchmarks/runner/: __init__.py  backends.py  client.py  config.py  config_loader.py  metrics_collector.py  result_aggregator.py  run_comparison.py
cost/: __init__.py  cost_analysis.py  gpu_pricing.yaml
docs/: architecture.md  comparisons.md  cost-model.md  experiments.md  portfolio.md  quantization.md
infra/: docker-compose.yml
infra/grafana/dashboards/: llm-inference-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: grafana.yaml  lmdeploy-deployment.yaml  prometheus.yaml  tgi-deployment.yaml  triton-deployment.yaml  vllm-deployment.yaml
infra/prometheus/: prometheus.yml
models/convert/: README.md  convert_to_onnx.py  convert_to_trtllm.py  quantize_awq.py  quantize_int8.py
models/triton_model_repo/llama3-8b-trt/: config.pbtxt
models/triton_model_repo/llama3-8b-trt/1/: .gitkeep
notebooks/analysis/: README.md  cost_per_token.ipynb  latency_vs_throughput.ipynb
scripts/: launch_all.sh  run_experiment.sh
tests/: test_config.py  test_cost_analysis.py  test_result_aggregator.py
